[package]
name = "rs3_pathfinding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rs3_pathfinding"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.2"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
zune-inflate = "0.2.54"
pathfinding = "4.9.1"
indicatif = "0.17.8"
